syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

// 同步精英副本剩余步数
message GCEliteDuplicateSyncStepProto {
	optional int32 msgType = 1[default = 25203];//协议号
	optional int32 status = 2;// 结果状态。10000成功；10201未开始挑战；10202步数异常（步数大于当前步数）
	optional int32 eliteId = 3;// 精英副本Id（城市Id）
	optional int32 leftSteps = 4;// 剩余步数
}
