syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
//服务器返回通用协议
message GCFunctionOpenInfoProto {
  optional int32 msgType = 1[default = 5509];//协议号
  optional int32 status = 2;//状态码
  repeated int32 functionIds = 3;//系统id
  
}