syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message AchieveListProto {
    optional int32 taskId = 1;//任务ID
    optional string process = 2;//进度
    optional int32 status = 3;//0未完成1可领取2已领取
}

message GCGetAchieveListProto {
  optional int32 msgType = 1[default = 2220];//协议号
  optional int32 status = 2;//状态码
  optional int32 totalPoint = 3;//当前积分
  optional int32 totalReward = 4;//已领取奖励
  optional string activeList = 5;//分类活跃度1,2,3
  repeated AchieveListProto tasks = 6;//任务列表
}
