syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
message GCGetDayTaskRewardProto {
  optional int32 msgType=1 [default = 2211];//技能升级
  optional int32 status= 2;//0成功,1失败
  optional int32 rewardType = 3;//奖励类型1任务2活跃
  optional int32 activeId=4;//活跃度
  optional int32 taskId=5;//任务ID
  optional int32 point=6;//活跃度
}