syntax = "proto2";
package buffer;

//获取首充状态
message GCGetRoleFirstPayInfoProto {
  optional int32 msgType = 1[default = 4404];//协议号
  optional int32 status = 2;//协议状态
  optional string firstStatus = 3;//首充状态
}