syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符


message GCSivenSignProto {    
  optional int32 day = 1;//=天数
  optional int32 status = 2;//状态[0:不可领取  1:可领取  2:已领取]
  optional int32 unitType = 3;//奖励类型
  optional int64 unitId = 4;//奖励id
  optional int64 num = 5;//奖励数量 

}


//7日签到状态获取
message GCGetSevenSignStatusProto {
	optional int32 msgType = 1[default = 3306];//协议号
	optional int32 status = 2;//状态码
  	repeated GCSivenSignProto sivenSigns = 3;
}
