syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message GCHeartBeatProto {
	 optional int32 msgType=1 [default = 1019];//协议类型
	 optional int32 status=2;//状态
	 optional int32 pong=3;//
}