syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message GCHeroCommentProto {
  optional int32 msgType=1 [default = 24013];//协议类型  
  optional int32 status=2;//协议状态
}