syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message GCMailDeleteProto {
  optional int32 msgType=1 [default = 2203];// 协议号
  optional int32 status= 2;// 状态
  optional int32 delType=3;// 1单个2全部
  optional int32 mailType=4;//邮件类型1好友2系统
  optional int64 params=5;//邮件ID
}