syntax = "proto2";
package buffer;

message GCPowerFullProto{
	optional int32 msgType = 1[default = 24024];//协议号
	optional int32 status = 2;//协议状态
	optional int32 power = 3;//新值
}