syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

message GCRedHatCancelProto {
  optional int32 msgType=1 [default = 5507];//协议类型
  optional int32 status = 2;//状态码
}