syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
//请求添加好友
message GCSendFriendReqProto {
  optional int32 msgType = 1[default = 2011];//协议号
  optional int32 status = 2;//状态码
}