syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
//赠送好友点返回
message GCSendFriendShipProto {
  optional int32 msgType = 1[default = 2021];//协议号
  optional int32 status = 2;//状态码
  optional int32 friendShip=3;//最新的好友点
  optional int64 targetUid=4;//对方的UID
   optional int32 hasSendFriendShip=5;//1表示可赠送2表示已赠送
   optional int32 canReceiveFriendShip=6;//1表示可2表示已
}