syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

//通知客户端触发引导
message GCSendGuideProto {
  optional int32 msgType = 1[default = 5502];//协议号
  optional int32 status = 2;//状态码
  repeated int32 guides = 3;
}


